Revision history for Perl extension Catalyst::Engine::PSGI

0.13  Thu Jun  9 23:58:10 PDT 2011
        - Fixed a bug in PSGI header generation to prevent potential HTTP header injection
        - Misc doc fixes

0.12  Thu Jan  6 14:37:53 PST 2011
        - Fix for Catalyst::Runtime >= 5.80030 (pedromelo)

0.11  Fri Jul 30 12:49:46 PDT 2010
        - Allows setting a code reference to the $c->res->body as
          a raw PSGI streaming (t0m)

0.10  Thu May 20 14:38:03 PDT 2010
        - Added docs for frontend proxy and X-Forwarded-* headers

0.09  Wed Apr  7 20:17:57 PDT 2010
        - Escape :: in the helpers for .psgi files (lestrrat)

0.08  Fri Mar 19 00:58:35 PDT 2010
        - Fixed a problem with URLMap where root access gets an empty path (omega)

0.07  Thu Dec 10 22:14:04 PST 2009
        - Clear env reference to avoid leaks in Servers like AnyEvent (chiba)
        - Added Catalyst::Controller::Metal

0.06  Sat Nov  7 20:20:45 PST 2009
        - Added Action::RenderView dependency

0.05  Mon Oct 26 00:44:11 PDT 2009
        - Removed another Catalyst dev dependency

0.04  Mon Oct 19 19:41:51 PDT 2009
        - Bump up Catalyst dep to 5.8 (thanks to mst)

0.03  Fri Oct 16 00:21:37 PDT 2009
        - Added Test::Requires

0.02  Tue Oct 13 13:28:49 PDT 2009
        - Do not use Static::Simple in the test (Thanks to beppu)

0.01  Sat Sep  5 17:29:03 2009
        - original version