@@ -1,5 +1,8 @@
 Revision history for Perl extension Catalyst::Engine::PSGI
 
+        - Use the _set_env writer in Catalyst::Engine if available to
+          avoid deprecation warnings in Catalyst 5.80034
+
 0.13  Thu Jun  9 23:58:10 PDT 2011
         - Fixed a bug in PSGI header generation to prevent potential HTTP header injection
         - Misc doc fixes
